# cr-assistant

./: .gitignore  README.md  devbox.json  pyproject.toml
crassistant/: cards_in_hand.py  image_utils.py  main.py  slot.py
crassistant/models/: cards_in_hand.py  slot.py
