[tool.poetry]
name = "crassistant"
version = "0.1.0"
description = "CR Assistant"
authors = ["Double Jo <doublejo@ik.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.9.0.80"
pyautogui = "^0.9.54"
pyscreeze = "^0.1.30"
pillow = "^10.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.typecheck]
# List of members which are set dynamically and missed by pylint inference
# system, and so shouldn't trigger E1101 when accessed. Python regular
# expressions are accepted.
generated-members = ["cv2.*"]